# ralph-footy

./: .env.example  .gitignore  AGENTS.md  GENESIS.md  IMPLEMENTATION_PLAN.md  Quant_Desk_Simulation.md  RALPH_METHODOLOGY.md  README.md  STORY_MAP.md  pyproject.toml
data/: teaching_topics.json
data/rounds/: round_01.json
data/tips/: round_01.md
data/tips_log/: round_01.json
ralph/: __init__.py  calibration.py  cli.py  fixtures.py  market.py  models.py  output.py  quant.py  rationale.py  sentiment.py  teaching.py  team_names.py  tips.py  tracking.py
ralph/apis/: champion_data.py  odds_api.py
specs/: 01_check_fixtures.md  02_see_market_odds.md  03_get_ralphs_pick.md  04_understand_why.md  05_learn_something.md  06_track_accuracy.md  07_share_tip_sheet.md
tests/: conftest.py  test_champion_data.py  test_e2e.py  test_fixtures.py  test_market.py  test_models.py  test_odds_api.py  test_output.py  test_quant.py  test_rationale.py  test_teaching.py  test_team_names.py  test_tips.py  test_tracking.py
